# ocean-gl

./: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: camera.cpp  camera.h  cubemap.cpp  cubemap.h  engine.cpp  engine.h  loader.cpp  loader.h  main.cpp  object.cpp  object.h  shader.cpp  shader.h  ui.cpp  ui.h  water.cpp  water.h
src/shaders/: cubemap_fragment.glsl  cubemap_vertex.glsl  fragment.glsl  object_passthrough_fragment.glsl  object_passthrough_vertex.glsl  vertex.glsl  water_fragment.glsl  water_tess_control.glsl  water_tess_eval.glsl  water_vertex.glsl
